--- a/src/Components/CSS/nav.css
+++ b/src/Components/CSS/nav.css
@@ -1,22 +1,136 @@
-*
-{
-    scroll-padding-top: 100px;
+.home{
+    background-color: #212121;
 }
-html{
-    margin: 0;
-    scroll-padding-top: 100px;
-}
-img{
-    width: 50px;
-}
-nav.navbar{
-    position: fixed;
+nav {
     width: 100%;
-    top: 0;
-    
-    scroll-padding-top: 100px;
+    height: -webkit-fill-available;
 }
-div.raw1{
-    margin-top: 80px;
-    
+
+.navBar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 72px;
+    width: -webkit-fill-available;
+    height: 80px;
+    left: 0px;
+    top: 1px;
+    background-color: #212121;
+
+}
+
+.logo {
+    position: absolute;
+    width: -moz-fit-content;
+    left: 14px;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
+    top: 16px;
+}
+
+.logoImg{
+    cursor: pointer;
+    width: 70px;
+    border: 1px solid white;
+    padding: 5px;
+    border-radius: 5px;
+    transition: ease 0.2s;
+}
+.logoImg:hover{
+    background-color: #3455e7;
+}
+
+.link{
+    position: absolute;
+    color: white;
+    left: 150px;
+}
+
+ul{
+    display: flex;
+}
+li{
+    list-style: none;
+}
+
+
+
+
+.search {
+    position: absolute;
+    width: 710px;
+    height: 45px;
+
+    border-radius: 5px;
+
+    /* Inside auto layout */
+
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    color: white;
+    right: 400px;
+}
+
+.searchInput {
+    position: absolute;
+    width: -webkit-fill-available;
+    height: calc(100% - 3px);
+    background-color: transparent;
+    font-size: 20px;
+    color: white;
+    border: none;
+    padding-left: 20px;
+}
+
+.searchPanel {
+    position: absolute;
+    width: 710px;
+    height: 45px;
+    left: 0px;
+    top: 0px;
+    display: flex;
+
+    background: #504E4E;
+    border-radius: 5px;
+}
+
+.searchIcon {
+    position: absolute;
+    width: 92px;
+    height: 45px;
+    left: 618px;
+    top: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #0F0D0D;
+    border-radius: 0px 5px 5px 0px;
+    cursor: pointer;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s;
+}
+.searchIcon:hover{
+    background-color: #ff605d8f;
+}
+
+.sIcon {
+    position: absolute;
+    width: 27px;
+    height: 27px;
+    top: 9px;
+    right: 20px;
+}
+
+.socialMedia{
+    position: absolute;
+    display: flex;
+    right: 30px;
+    color: white;
+    justify-content: center;
+    align-items: center;
+}
+.social-head{
+    margin-right: 20px;
+    font-size: 16px;
 }
