--- a/src/Components/CSS/nav.css
+++ b/src/Components/CSS/nav.css
@@ -13,20 +13,16 @@ nav {
     gap: 72px;
     width: -webkit-fill-available;
     height: 80px;
-    left: 0px;
-    top: 1px;
     background-color: #212121;
 
 }
 
 .logo {
-    position: absolute;
+    position: relative;
     width: -moz-fit-content;
-    left: 14px;
     flex: none;
     order: 0;
     flex-grow: 0;
-    top: 16px;
 }
 
 .logoImg{
@@ -42,9 +38,8 @@ nav {
 }
 
 .link{
-    position: absolute;
+    position: relative;
     color: white;
-    left: 150px;
 }
 
 ul{
@@ -58,38 +53,35 @@ li{
 
 
 .search {
-    position: absolute;
-    width: 710px;
+    position: relative;
     height: 45px;
 
     border-radius: 5px;
 
-    /* Inside auto layout */
-
     flex: none;
-    order: 1;
     flex-grow: 0;
     color: white;
-    right: 400px;
 }
 
 .searchInput {
-    position: absolute;
+    position: relative;
     width: -webkit-fill-available;
-    height: calc(100% - 3px);
+    height: -webkit-fill-available;
+    margin: auto;
     background-color: transparent;
     font-size: 20px;
     color: white;
     border: none;
     padding-left: 20px;
 }
+.searchInput:focus{
+    outline: none;
+}
 
 .searchPanel {
-    position: absolute;
+    position: relative;
     width: 710px;
     height: 45px;
-    left: 0px;
-    top: 0px;
     display: flex;
 
     background: #504E4E;
@@ -97,35 +89,33 @@ li{
 }
 
 .searchIcon {
-    position: absolute;
+    position: relative;
     width: 92px;
     height: 45px;
-    left: 618px;
-    top: 0px;
     display: flex;
     align-items: center;
     justify-content: center;
     background: #0F0D0D;
     border-radius: 0px 5px 5px 0px;
     cursor: pointer;
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.1s;
 }
 .searchIcon:hover{
     background-color: #ff605d8f;
 }
+.searchIcon:active{
+    background-color: #3455e7;
+}
 
 .sIcon {
-    position: absolute;
+    position: relative;
     width: 27px;
     height: 27px;
-    top: 9px;
-    right: 20px;
 }
 
 .socialMedia{
-    position: absolute;
+    position: relative;
     display: flex;
-    right: 30px;
     color: white;
     justify-content: center;
     align-items: center;
